Patch from Marius Orcsik; fixes layout problems on main page.

--- a/web/themes/librefm/base.css
+++ b/web/themes/librefm/base.css
@@ -129,3 +129,9 @@ input[type="reset"],
 input[type="submit"] {
 	padding:1px;
 }
+
+/* cleaner divs - to allow regular flow for parents of floated elements */
+
+div.cleaner {
+    clear:both;
+}
